# news-process-exploration

./: .gitignore  DESIGN.md  README.md  VECTOR_DESIGN.md  main.py  pyproject.toml
algo/: __init__.py
algo/summarizers/: llm_summarizer.py  summarizer_service.py
common/: models.py  protocol.py
docs/: event_schema.md
examples/: main_vector_store.py  vector_search_demo.py
pipeline/: backfill_embeddings.py  main_vector_store_creation.py  news_abstract_process.py
processors/: cleaner.py  event_extractor.py  event_llm.py  summarizer.py  summarizer_dummy.py
repo/: __init__.py  news_repository.py
runner/: executor.py  flow_runner.py
scripts/: start_embedding.sh
tests/unit/: summarizer_test.py  test_event_extractor.py  test_event_llm.py  test_executor.py  test_flow_runner.py  test_llm_summarier.py
